# GameEngineFoundation

./: AssetManager.cpp  CMakeLists.txt  Component.cpp  FileSystem.cpp  GameEngine.cpp  GameObject.cpp  GameObjectManager.cpp  InputManager.cpp  Object.cpp  README.md  RenderSystem.cpp  main.cpp  tinyxml2.cpp
Assets/: GameLevelExample.xml  GameSettings.xml
Headers/: AssetManager.h  Component.h  FileSystem.h  GameEngine.h  GameObject.h  GameObjectManager.h  InputManager.h  Object.h  RenderSystem.h
